# fernengine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
dependencies/glad/include/glad/: gl.h
include/: fern.h
source/: camera.c  display.c  engine.c  fern_error.c  input.c  loader.c  material.c  model.c  primitives.c  shader.c  texture.c  transform.c
